# vm

./: .vm.toml  Cargo.toml  README.md  mise.toml  rust-toolchain.toml
.claude/skills/vm/: SKILL.md
.claude/skills/vm-upgrade/: SKILL.md
.claude/skills/vm-upgrade/scripts/: windows-update.ps1  winget-machine.ps1
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
probes/a11y-probe/: Cargo.toml
probes/a11y-probe/src/: linux.rs  mac.rs  main.rs  win.rs
src/: claude.rs  cli.rs  clock.rs  commands.rs  config.rs  deploy.rs  doctor.rs  exit.rs  guest_env.rs  idle.rs  journal.rs  lib.rs  lock.rs  main.rs  mapping.rs  prl.rs  prldnd.rs  proto.rs  reap.rs  repo_config.rs  ssh.rs
src/exec/: advise.rs  guest.rs  host.rs  job_unix.rs  job_windows.rs  mod.rs  run.rs
src/sync/: git.rs  guest.rs  host.rs  mod.rs
tests/: advisories.rs  canary.rs  concurrency.rs  doctor.rs  exec_agent.rs  exit_codes.rs  first_sync.rs  host_agent.rs  journal.rs  prl_lifecycle.rs  real_vm.rs  reap.rs  sigpipe.rs  sync.rs  sync_race.rs
tests/fake/: mod.rs
