[package]
name = "vm"
version = "0.2.0"
edition = "2024"

[workspace]
members = ["probes/a11y-probe"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"
