[package]
name = "a11y-probe"
version = "0.1.0"
edition = "2024"
publish = false

[target."cfg(windows)".dependencies]
uiautomation = "0.25.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.30.0", features = ["tokio", "zbus"] }
tokio = { version = "1", features = ["rt"] }
libc = "0.2.186"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGSession", "CGWindow"] }
objc2-application-services = { version = "0.3", features = ["AXUIElement", "AXError", "libc"] }
